tests/integration/snapshots/integration__flir__fix_options-3.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"--fix\").arg(\"--unsafe-fixes\").arg(\"--fix-only\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
--fix --unsafe-fixes --fix-only
