tests/integration/snapshots/integration__flir__minimum_r_version-2.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"--min-r-version\").arg(\"4.6\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
test.R [1:0] grepv Use `grepv(...)` instead of `grep(..., value = TRUE)`.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
--min-r-version 4.6
