tests/integration/snapshots/integration__flir__minimum_r_version.snap
---
source: tests/integration/flir.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"--min-r-version\").arg(\"4.4\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
--min-r-version 4.4
